# Test

./: CMakeLists.txt  README.md
Basics/: CustomWidget.kv  Test.kv  android.txt  det.txt  main.py  playerdb.kv  studentdb.kv
Test/src/: CMakeLists.txt
src/: CMakeLists.txt  csps.py  python_gui_test.py  threespace_api.py
